# autoclaw

./: .gitignore  BLUEPRINT.md  Cargo.toml  DISTRIBUTION.md  Dockerfile  Dockerfile.rust  HOWTO.md  INDEX.md  PRIVACY.md  PROJECT_SUMMARY.md  README.md  agent.go  agent.py  autoclaw-meta-prompt.md  autoclaw.sh  context.md  dashboard.html  deals.go  docker-compose.yml  eval.py  evo.go  fly.toml  go.mod  install.ps1  install.sh  prometheus.yml  railway.json  render.yaml  results.json  rubric.json  test_agent.sh  test_cmds.sh  test_cmds.txt  train.py
.github/: SECURITY.md  dependabot.yml
.github/workflows/: android.yml  ci.yml  codeql.yml  docker.yml  release-publish.yml  release.yml  sdk-tests.yml
docs/: ADOPTION_RETENTION_MONETIZATION.md  ARCHITECTURE.md  CLAUDE_COWORK_INTEGRATION.md  DIAGRAMS.md
mobile/: Cargo.toml  PLAY_STORE.md  README.md  SIDELOAD.md  tauri.conf.json
mobile/icons/: .gitkeep  README.md
mobile/src/: lib.rs  main.rs
packaging/debian/: control
packaging/homebrew/: autoclaw.rb
packaging/scoop/: autoclaw.json
sdk/go/: README.md  client.go  client_test.go  go.mod  types.go
sdk/js/: README.md  package.json  tsconfig.json
sdk/js/src/: client.test.ts  client.ts  index.ts  types.ts
sdk/python/: README.md  pyproject.toml
sdk/python/src/autoclaw/: __init__.py  cli.py  client.py  models.py
sdk/python/tests/: test_client.py
site/: 404.html  dashboard.html  index.html  robots.txt  sitemap.xml  vercel.json
src/: agent.rs  context.rs  deploy.rs  eval.rs  git.rs  harness.rs  init.rs  lib.rs  main.rs  metrics.rs  server.rs  state.rs  telemetry.rs  triggers.rs
templates/: CONTEXT_CAVEMAN.md  CONTEXT_TEMPLATE.md  EVAL_RUBRIC.json
ui/: index.html  package.json  vite.config.ts
ui/src/: App.css  App.tsx
ui/src/components/: Chart.css  Chart.tsx  ContextEditor.css  ContextEditor.tsx  ExperimentList.css  ExperimentList.tsx  MetricsCard.css  MetricsCard.tsx
ui/src/hooks/: useWebSocket.ts
