[package]
name = "autoclaw"
version = "0.1.0"
edition = "2021"
authors = ["Autoclaw Team"]
description = "No-code self-improving automation loop for Claude Cowork"
license = "MIT"
repository = "https://github.com/dnzengou/autoclaw"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
parking_lot = "0.12"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "fs", "trace"] }
git2 = "0.18"
walkdir = "2.4"
tempfile = "3.9"
regex = "1.10"
handlebars = "5.0"
notify = "6.1"
crossbeam = "0.8"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"

[[bench]]
name = "agent_loop"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
