[package]
name = "autoclaw-mobile"
version = "0.1.0"
edition = "2021"
description = "Autoclaw mobile shell — Tauri 2 wrapper around the dashboard"

[lib]
name = "autoclaw_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
