[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoclaw"
version = "0.1.0"
description = "Self-improving AI experiment loop — Python SDK + CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Autoclaw Team" }]
keywords = ["llm", "agent", "automation", "claude", "experiments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
cli = ["rich>=15.0.0", "typer>=0.12"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
autoclaw = "autoclaw.cli:main"

[project.urls]
Homepage = "https://autoclaw.dev"
Repository = "https://github.com/dnzengou/autoclaw"
Documentation = "https://docs.autoclaw.dev"

[tool.hatch.build.targets.wheel]
packages = ["src/autoclaw"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
strict = true
